# freetype2-sdf-demo

./: CMakeLists.txt  README.md
src/: demo.cpp  demo.h  error.h  gkaiu59.inl  log.h  main.cpp  martel.inl  openglmanager.cpp  openglmanager.h  roboto.inl  texture.cpp  texture.h
